# cdpwave

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  FIX-ROADMAP.md  Makefile  README.md  SECURITY.md  TEST-ROADMAP.md  errors.txt  mkdocs.yml  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  question.yml
.github/workflows/: ci.yml  docs.yml  release.yml  test.yml
cdpwave/: __init__.py  client.py  exceptions.py  sync.py  types.py  waiters.py
cdpwave/browser/: __init__.py  discovery.py  finder.py  launcher.py
cdpwave/domains/: __init__.py  accessibility.py  ads.py  animation.py  audits.py  autofill.py  background_service.py  base.py  bluetooth_emulation.py  browser.py  cache_storage.py  cast.py  console.py  crash_report_context.py  css.py  debugger.py  device_access.py  device_orientation.py  digital_credentials.py  dom.py  dom_debugger.py  dom_snapshot.py  dom_storage.py  emulation.py  event_breakpoints.py  extensions.py  fed_cm.py  fetch.py  file_system.py  headless_experimental.py  heap_profiler.py  indexed_db.py  input.py  inspector.py  io.py  layer_tree.py  log.py  media.py  memory.py  network.py  (+22 more)
cdpwave/events/: __init__.py  dispatcher.py  handlers.py
cdpwave/session/: __init__.py  manager.py
cdpwave/transport/: __init__.py  connection.py  correlation.py  pipe_connection.py  serializer.py
docs/: index.md  quickstart.md
docs/api/: client.md  domains.md  events.md  exceptions.md  session.md
docs/cookbook/: connect-existing.md  custom-flags.md  error-handling.md  escape-hatch.md  headless.md  migrating.md  troubleshooting.md
docs/guide/: advanced-domains.md  browser-launch.md  debugging.md  dom.md  emulation-input.md  evaluation.md  events.md  fetch-network.md  installation.md  multi-tab.md  navigation.md  network.md  performance-profiling.md  screenshots.md  storage-cache.md
docs/migration/: pychrome.md  pyppeteer.md
tests/: DOMAIN.md  conftest.py  manual_smoke.py
tests/e2e/: test_accessibility_e2e.py  test_browser_e2e.py  test_cache_storage_e2e.py  test_cast_tethering_e2e.py  (+27 more)
(+140 files in other folders)
