[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cdpwave"
version = "2.5.0"
description = "Chrome DevTools Protocol for Python — direct CDP over WebSocket, no Selenium, no Playwright"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "Mathias Paulenko", email = "mathias.paulenko@outlook.com" }]
keywords = ["cdp", "chrome", "devtools", "browser", "automation", "async", "chromium"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP :: Browsers",
    "Topic :: Software Development :: Testing",
]
dependencies = [
    "websockets>=12.0",
    "pydantic>=2.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.0",
    "ruff>=0.4",
    "mypy>=1.10",
    "build>=1.2",
]
docs = [
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.24",
]

[project.urls]
Homepage = "https://github.com/MathiasPaulenko/cdpwave"
Repository = "https://github.com/MathiasPaulenko/cdpwave"
Issues = "https://github.com/MathiasPaulenko/cdpwave/issues"

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = ["tests/manual"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "ASYNC"]
ignore = ["ASYNC109"]

[tool.mypy]
strict = true
python_version = "3.11"
exclude = ["tests/manual/"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests/unit"]
markers = [
    "unit: fast isolated tests with mocks",
    "integration: tests against a real Chrome browser",
    "slow: tests that take more than 5 seconds",
    "chrome: tests that require Chrome specifically",
]

[tool.hatch.build.targets.wheel]
packages = ["cdpwave"]
